--- a/css/component.css
+++ b/css/component.css
@@ -25,12 +25,12 @@ html, body,
 	position: relative;
 	z-index: 9999;
 	color: transparent;
-	width: 26px;
-	height: 26px;
+	width: 14px;
+	height: 14px;
 	outline: none;
-	margin: 25px 0;
+	margin: 10px 0;
 	border-radius: 50%;
-	border: 4px solid #fff;
+	border: 1px solid #fff;
 }
 
 .no-touch .cbp-fbscroller > nav a:hover {
@@ -71,5 +71,8 @@ html, body,
 
 #fbsection5 {
 	background-image: url(../images/5.jpg);
+}
+#fbsection6 {
+	background:white;
 }
 
