--- a/css/component.css
+++ b/css/component.css
@@ -54,7 +54,7 @@ html, body,
 }
 
 #fbsection1 {
-	background: rgba(144,19,254,0.09) url(../images/01.jpg) no-repeat;
+background-image: linear-gradient(155deg, rgba(107,5,133,0.57) 0%, rgba(30,2,61,0.74) 100%), url(../images/01.jpg);
 }
 
 #fbsection2 {
@@ -70,9 +70,22 @@ html, body,
 }
 
 #fbsection5 {
-	background-image: url(../images/02.jpg);
+
+	background-image:linear-gradient(0deg, rgba(69,5,125,0.45) 1000%, rgba(69,5,125,0.45) 100%),url(../images/02.jpg), filter:blur (8px),;
+	filter: blur(8px);
+	 -webkit-filter: blur(8px);
+	background-image:linear-gradient(0deg, rgba(69,5,125,0.45) 1000%, rgba(69,5,125,0.45) 100%),url(../images/02.jpg);
+
 }
 #fbsection6 {
 	background:white;
 }
-
+button{
+	border-radius: 25px;
+	color: white;
+	background: #ED1E79;
+}
+img {
+	width: 200px;
+	border-radius: 25px;
+}
